--- a/_posts/2017-12-17-Keras 공부할 수 있는 블로그.md
+++ b/_posts/2017-12-17-Keras 공부할 수 있는 블로그.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "블로그 소개: 케라스, 그 간결함에 빠지다"
-author: "둥둥이"
+author: "윤두현"
 ---
 
 ## 블로그 추천: [케라스, 그 간결함에 빠지다.](https://tykimos.github.io/lecture/)
